--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
         <div id="wrapper">
             <div id="container">
                 <canvas data-processing-sources="
-                pde/particulasImagenNoGui.pde
-                pde/Palette.pde
-                pde/ParticleOpacity.pde
-                pde/ParticleSystem.pde"></canvas>
+                    pde/ParticleOpacityParams.pde
+                    pde/particulasImagenNoGui.pde
+                    pde/Palette.pde
+                    pde/ParticleOpacity.pde
+                    pde/ParticleSystem.pde
+                "></canvas>
             </div>
         </div>
 
